src/pages/resume/Resume.css
.main-resume-container {
    height: 100%;
    background-color: rgb(255, 255, 141);
}

.arrow-resume-container {
    width: 100%;
    height: 5rem;
    display: flex;
    justify-content: flex-start;
    background-color: rgb(255, 255, 141);
}

.arrow-resume-link {
    margin-left: 3rem;
    margin-top: 1rem;
    width: 5%;
}

.arrow-resume-image {
    height: 3rem;
}

.resume-container {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 90vh;
}

.resume-image {
    width: 90vw;
    height: 90vh;
    object-fit: contain;
}

@media (max-width: 1234px) {
    .main-resume-container {
        height: 100vh;
    }
}

